# medical_image_search

./: .gitignore  Cargo.toml  README.md  calculate_embeddings.py  pyproject.toml
app/: app.py
medical_ann/: Cargo.toml
medical_ann/src/: main.rs
scripts/: calculate_embeddings.py
src/: main.rs
static/: style.css
templates/: index.html.tera
