[package]
name = "medical_image_search"
version = "0.1.0"
edition = "2021"

[dependencies]
hnsw = "0.8.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.6"
